# claude_buddy_rpg

./: .gitignore  .mcp.json  README.md  TODO.md  pyproject.toml
codecritter/: reactions.py  sync.py
codecritter-plugin/.claude-plugin/: plugin.json
codecritter-plugin/statusline/: codecritter-status.sh
codecritter/widgets/: speech_bubble.py
jamb/: app.py  art_cache.py  chat_engine.py  cli.py  config.py  constants.py  hook_handlers.py  jamb.tcss  mcp_server.py  models.py  persistence.py  setup.py  shop.py  sync.py
jamb-plugin/: .mcp.json  CLAUDE.md
jamb-plugin/.claude-plugin/: marketplace.json  plugin.json
jamb-plugin/hooks/: hooks.json
jamb-plugin/skills/card/: SKILL.md
jamb-plugin/skills/sync/: SKILL.md
jamb-plugin/statusline/: jamb-status.sh
jamb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jamb/activities/: chaos.py  choice.py  debugging.py  patience.py  snark.py  wisdom.py
jamb/dungeon/: data_loader.py  enemies.py  engine.py  generator.py  items.py
jamb/screens/: achievements_screen.py  battle_screen.py  care_screen.py  chat_screen.py  dungeon_screen.py  evolution_screen.py  extraction_screen.py  fork_screen.py  inventory_screen.py  loot_screen.py  main_screen.py  shop_dungeon_screen.py  shop_screen.py  status_screen.py  training_screen.py
jamb/widgets/: ascii_art.py  menu.py  speech_bubble.py
