[project]
name = "jamb"
version = "0.2.0"
description = "TUI tamagotchi training ground for Jamb, your ★★★ RARE snail companion"
requires-python = ">=3.12"
dependencies = ["textual>=1.0"]

[project.optional-dependencies]
chat = ["anthropic>=0.40"]
local = ["openai>=1.0"]
mcp = ["mcp>=1.0"]
all = ["anthropic>=0.40", "openai>=1.0", "mcp>=1.0"]

[project.scripts]
jamb = "jamb.__main__:main"
